# ImageManipulation

./: CHANGELOG.md  ImageManipulation.cabal  README.md  package.yaml  stack.yaml
app/: Main.hs
src/: ImageManipulation.hs
